# bi-DCSR

HPTMcode/: README
HPTMcode/HPTM/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  data.cpp  data.h  estimate.cpp  estimate.h  example.sh  main  main.cpp  main.h  setting.txt  train.cpp  train.h  util.h
HPTMcode/HPTM/.deps/: data.Po  esitmate.Po  estimate.Po  main-data.Po  main-estimate.Po  main-main.Po  main-train.Po  main.Po  train.Po
HPTMcode/HPTM/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
bi-DCSR/: README.txt
bi-DCSR/arxiv/: arxivscraper.py  buildsentencevecsforsearchandclassify.py  bulidDictionaryMultiThread.py  codeModelFormatOneThead.py  countlabelrate.py  eseClassificationforarxiv.py  getabstract.py
bi-DCSR/bi-DCSR-code/: codeInfereceFormatOneThread.py  esedropoutClassification.py  esedynamicclassification.py  searchengineWordtoSentences.py  showSimilarTags.py  showTopicsByWords.py  showWordsMultiSemantics.py
bi-DCSR/dataprepare/: buildsentencevecsforsearch.py  codeModelFormatoneThread.py  countTotalWords.py  countwordfrequency.py  sampleSentenceLabels.py  simulateData.py
bi-DCSR/medical/: preprocess.py
bi-DCSR/newsgroups/: extractContent.py
bi-DCSR/test/: cn_stopwords.txt  constructestopwords.py  excel.py  excel2.py  test1.py  test2.py
bi-DCSR/wiki/: bulidDictionaryMultiThread.py  codeModelFormatMultiThread.py  (+3 more)
law/: DICTIONARY.txt  cn_stopwords.txt  codeInfereceFormatOneThread.py
medical/: DICTIONARY.txt  codeTextToHPTMFormat.py  stopwords
(+1 files in other folders)
